Add tags & fix footer

--- a/front-developers-games/public/index.html
+++ b/front-developers-games/public/index.html
@@ -7,10 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Developer Games from Redhat."
+      content="Developer Games from Redhat"
     />
+    <meta name="keywords" content="HTML, CSS, JavaScript, React, BIKUP TECH SOLUTIONS S.L., ">
+    <meta name="copyright" content="BIKUP TECH SOLUTIONS S.L." />
+    <meta name="author" content="BIKUP TECH SOLUTIONS S.L.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
-  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>Developer Games</title>
