Replace email .com for .net

--- a/back-developers-games/src/services/coso.html
+++ b/back-developers-games/src/services/coso.html
@@ -35,7 +35,7 @@
         Remember to <a href="https://events.redhat.com/profile/form/index.cfm?PKformID=0x395144abcd" style="color: #00ADAF;" >request your welcome kit</a> if you haven't done that yet!<br><br>
 
         If you have any problems with login details please contact:<br>
-        <a href="mailto:games@developergames.com?Subject=Login-problem" style="color: #00ADAF;">games@developergames.com</a>
+        <a href="mailto:games@developergames.net?Subject=Login-problem" style="color: #00ADAF;">games@developergames.net</a>
       </p>
     </div>
   
